More projects, Scroll Behavior
Add more projects to the page
Sticky headers for scrolling

--- a/projects.html
+++ b/projects.html
@@ -36,29 +36,17 @@
 
         <h2 class="headliner">Costumes</h2>
 
-        <div class="j-peterman">
+        <div>
             <h3>J. Peterman Project</h3>
 
             <p>In my Costumes 1 Class we were tasked with finding two items of clothing from our wardrobe that
                 represented an example of clothing as protest. We then had to render them in the style of J. Peterman
                 drawings and write a description similar to those on the J. Peterman website. </p>
 
+                <img src="images/costumes/peterman-shoe.png" class="j-peterman">
+                <img src="images/costumes/peterman-bandana.png" class="j-peterman">
 
-            <div class="grid-total">
-                <div class="grid-packet">
-                    <img src="images/costumes/peterman-shoe.png" class="grid-img">
-                    <!--<div class="overlay">
-                        <div class="grid-text">J. Peterman Shoe</div>
-                    </div>-->
-                </div>
 
-                <div class="grid-packet">
-                    <img src="images/costumes/peterman-bandana.png" class="grid-img">
-                    <!--<div class="overlay">
-                        <div class="grid-text">J. Peterman Bandana</div>
-                    </div>-->
-                </div>
-            </div>
         </div>
 
         <div class="almost-fairy-time">
@@ -141,12 +129,10 @@
         <div class="suit-jacket">
             <h3>Half-Scale Suit Jacket</h3>
 
-            
-
             <div class="gallery">
                 <img src="images/tailoring/jacket-front.jpg" />
                 <img src="images/tailoring/jacket-back.jpg" />
-                <img src="images/tailoring/jacket-lapels.jpg" />
+                <img src="images/tailoring/jacket-sans-sleeves.jpg" />
                 <!--<img src="images/tailoring/collar-pad-stitching.jpg" />-->
             </div>
 
@@ -180,17 +166,58 @@
             <h3>Scenic Paint Final</h3>
 
             <div class="gallery">
-                <img src="images/scenic-paint/" />
+                <img src="images/scenic-paint/final-paint1.jpg" />
+                <img src="images/scenic-paint/final-paint2.jpg" />
+                <img src="images/scenic-paint/final-paint3.jpg" />
+                <img src="images/scenic-paint/final-paint4.jpg" />
+                <div class="grid-packet">
+                    <img src="images/scenic-paint/final-paint5.jpg" class="grid-img">
+                    <div class="overlay">
+                        <div class="grid-text">Final</div>
+                    </div>
+                </div>
             </div>
         </div>
 
-        <div class="brick-stone">
-            <h3>Scenic Paint Final</h3>
+        <div>
+            <h3>Painted Drape Sample</h3>
 
             <div class="gallery">
-                <img src="images/scenic-paint/" />
+                <img src="images/scenic-paint/drape1.jpg" />
+                <img src="images/scenic-paint/drape2.jpg" />
+                <img src="images/scenic-paint/drape3.jpg" />
+                <img src="images/scenic-paint/drape4.jpg" />
+                <div class="grid-packet">
+                    <img src="images/scenic-paint/drape5.jpg" class="grid-img">
+                    <div class="overlay">
+                        <div class="grid-text">Final</div>
+                    </div>
+                </div>
             </div>
         </div>
+
+        <div>
+            <h3>Brick, Wood, Stone Sample</h3>
+
+            <div class="gallery">
+                <img src="images/scenic-paint/bws1.jpg" />
+                <img src="images/scenic-paint/bws2.jpg" />
+                <img src="images/scenic-paint/bws3.jpg" />
+                <img src="images/scenic-paint/bws4.jpg" />
+            </div>
+        </div>
+
+        <div>
+            <h3>Lanscape Sample</h3>
+
+            <div class="gallery">
+                <img src="images/scenic-paint/landscape1.jpg" />
+                <img src="images/scenic-paint/landscape2.jpg" />
+                <img src="images/scenic-paint/landscape3.jpg" />
+            </div>
+        </div>
+
+
 
     </section>
 
