--- a/productions.html
+++ b/productions.html
@@ -61,6 +61,7 @@
                     <p><span class="team-position">Hair & Makeup Designer: </span>Brittany Crinson</p>
                     <p><span class="team-position">Photographer: </span>Peter Smith</p>
                     <p><span class="team-position">Production Stage Manager: </span>Andy Blatt</p>
+                    <p><span class="team-position">Assistant Stage Managers: </span>Brook Galsky, Lindsay Robert</p>
                 </div>
 
                 <div class="show-details">
