Header update for mobile?

--- a/index.html
+++ b/index.html
@@ -14,22 +14,19 @@
 </head>
 
 <body>
-    <header>
+    <nav class="nav">
         <a class="logo" href="/index.html">
-            <h1>Andy Blatt</h1>
-            <h2>Theater Technician</h2>
+          <h1>Andy Blatt</h1>
+          <h2>Theater Technician</h2>
         </a>
-        
-        <nav>
-            <ul>
-                <li><a class="navigate" href="/index.html">Home</a></li>
-                <li><a class="navigate" href="/productions.html">Productions</a></li>
-                <li><a class="navigate" href="/projects.html">Projects</a></li>
-                <li><a class="navigate" href="/ABResume.pdf" target="_blank">Resume</a></li>
-                <li><a class="navigate" href="/contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>    
+        <ul class="nav-list">
+              <li><a class="navigate" href="/index.html">Home</a></li>
+              <li><a class="navigate" href="/productions.html">Productions</a></li>
+              <li><a class="navigate" href="/projects.html">Projects</a></li>
+              <li><a class="navigate" href="/ABResume.pdf" target="_blank">Resume</a></li>
+              <li><a class="navigate" href="/contact.html">Contact</a></li>
+          </ul>
+      </nav>  
     
   
     <section id="homepage" class="homepage">
