--- a/index.html
+++ b/index.html
@@ -54,9 +54,10 @@
         </div>
     </section>
     
+    <!-- TODO: Put images or something at the bottom of the page to spice it up a little more when on desktop -->
 
     <footer>
-        <a class="navigate" href="www.linkedin.com/in/andy-blatt-4b8952263" target="_blank">LinkedIn</a>
+        <a class="navigate" href="https://www.linkedin.com/in/andy-blatt-4b8952263" target="_blank">LinkedIn</a>
         <a class="navigate" href="mailto:andyfelix564@gmail.com" target="_blank">Email</a>
     </footer>
 </body>
