--- a/productions.html
+++ b/productions.html
@@ -181,7 +181,7 @@
     </section>
 
     <footer>
-        <a class="navigate" href="www.linkedin.com/in/andy-blatt-4b8952263" target="_blank">LinkedIn</a>
+        <a class="navigate" href="https://www.linkedin.com/in/andy-blatt-4b8952263" target="_blank">LinkedIn</a>
         <a class="navigate" href="mailto:andyfelix564@gmail.com" target="_blank">Email</a>
     </footer>
 </body>
