--- a/productions.html
+++ b/productions.html
@@ -39,7 +39,7 @@
             <h2 class="headliner">Julius Caesar</h2>
 
 
-            <div class="gallery">
+            <div class="production-gallery">
                 <img src="images/caesar/caesar1.jpg" />
                 <img src="images/caesar/caesar2.jpg" />
                 <img src="images/caesar/caesar7.jpg" />
@@ -76,7 +76,7 @@
         <div>
             <h2 class="headliner">Of Thee I Sing</h2>
 
-            <div class="gallery">
+            <div class="production-gallery">
 
                 <img src="images/otis/otis1.jpg" />
                 <img src="images/otis/otis2.jpg" />
@@ -110,7 +110,7 @@
         <div>
             <h2 class="headliner">Elizabeth Cree</h2>
 
-            <div class="gallery">
+            <div class="production-gallery">
                 <img src="images/cree/cree1.jpg" />
                 <img src="images/cree/cree2.jpg" />
                 <img src="images/cree/cree3.jpg" />
@@ -146,7 +146,7 @@
         <div>
             <h2 class="headliner">Pippin: Her Life and Times</h2>
 
-            <div class="gallery">
+            <div class="production-gallery">
                 <img src="images/pippin-hlt/pippin-hlt1.jpg" />
                 <img src="images/pippin-hlt/pippin-hlt2.jpg" />
                 <img src="images/pippin-hlt/pippin-hlt3.jpg" />
