--- a/resume.html
+++ b/resume.html
@@ -21,7 +21,7 @@
         </a>
         <ul class="nav-list">
             <li><a class="navigate" href="/contact.html">Contact</a></li>
-            <li><a class="navigate" href="/ABResume.pdf" target="_blank">Resume</a></li>
+            <li><a class="navigate" href="/resume.html" target="_blank">Resume</a></li>
             <li><a class="navigate" href="/projects.html">Projects</a></li>
             <li><a class="navigate" href="/productions.html">Productions</a></li>
             <li><a class="navigate" href="/index.html">Home</a></li>
@@ -29,10 +29,15 @@
       </nav>
     
 
-    <section id="resume" class="resume">
-
-        <embed href="/ABResume.pdf" type="application/pdf" title="Embedded PDF Viewer" class="resume-view" />
-
+    <section>
+        <div class="resume-all">
+            <img src="ABResume.png" class="resume" />
+            <div class="resume-download">
+                <a href="/ABResume.pdf" target="_blank">Click here to download resume</a>
+            </div>
+        </div>
+        
+       <!-- <embed src="/ABResume.pdf" type="application/pdf" title="Embedded PDF Viewer" class="resume-view" />-->
     </section>
     <footer>
         <a class="navigate" href="https://www.linkedin.com/in/andy-blatt-4b8952263" target="_blank">LinkedIn</a>
