Fix resume link in header

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </a>
         <ul class="nav-list">
             <li><a class="navigate" href="/contact.html">Contact</a></li>
-            <li><a class="navigate" href="/ABResume.pdf" target="_blank">Resume</a></li>
+            <li><a class="navigate" href="/resume.html" target="_blank">Resume</a></li>
             <li><a class="navigate" href="/projects.html">Projects</a></li>
             <li><a class="navigate" href="/productions.html">Productions</a></li>
             <li><a class="navigate" href="/index.html">Home</a></li>
