--- a/productions.html
+++ b/productions.html
@@ -22,7 +22,7 @@
         </a>
         <ul class="nav-list">
             <li><a class="navigate" href="/contact.html">Contact</a></li>
-            <li><a class="navigate" href="/ABResume.pdf" target="_blank">Resume</a></li>
+            <li><a class="navigate" href="/resume.html" target="_blank">Resume</a></li>
             <li><a class="navigate" href="/projects.html">Projects</a></li>
             <li><a class="navigate" href="/productions.html">Productions</a></li>
             <li><a class="navigate" href="/index.html">Home</a></li>
@@ -152,7 +152,6 @@
                 <img src="images/pippin-hlt/pippin-hlt2.jpg" />
                 <img src="images/pippin-hlt/pippin-hlt4.jpg" />   
                 <img src="images/pippin-hlt/pippin-hlt6.jpg" />
-
             </div>
 
             <div class="about-show">
