Update Projects Layout, Resume Layout
Fix Resume header
Update projects layouts

--- a/projects.html
+++ b/projects.html
@@ -17,17 +17,17 @@
 <body>
     <nav class="nav">
         <a class="logo" href="/index.html">
-          <h1>Andy Blatt</h1>
-          <h2>Theater Technician</h2>
+            <h1>Andy Blatt</h1>
+            <h2>Theater Technician</h2>
         </a>
         <ul class="nav-list">
             <li><a class="navigate" href="/contact.html">Contact</a></li>
-            <li><a class="navigate" href="/ABResume.pdf" target="_blank">Resume</a></li>
+            <li><a class="navigate" href="/resume.html" target="_blank">Resume</a></li>
             <li><a class="navigate" href="/projects.html">Projects</a></li>
             <li><a class="navigate" href="/productions.html">Productions</a></li>
             <li><a class="navigate" href="/index.html">Home</a></li>
         </ul>
-      </nav>
+    </nav>
 
     <section id="all-projects" class="all-projects">
 
@@ -36,14 +36,14 @@
         <div>
             <h3>J. Peterman Project</h3>
 
-            <p>In my Costumes 1 Class we were tasked with finding two items of clothing from our wardrobe that
+            <p>
+                In my Costumes 1 Class we were tasked with finding two items of clothing from our wardrobe that
                 represented an example of clothing as protest. We then had to render them in the style of J. Peterman
-                drawings and write a description similar to those on the J. Peterman website. </p>
+                drawings and write a description similar to those on the J. Peterman website.
+            </p>
 
-                <img src="images/costumes/peterman-shoe.png" class="j-peterman">
-                <img src="images/costumes/peterman-bandana.png" class="j-peterman">
-
-
+            <img src="images/costumes/peterman-shoe.png" class="j-peterman">
+            <img src="images/costumes/peterman-bandana.png" class="j-peterman">
         </div>
 
         <div class="almost-fairy-time">
@@ -52,9 +52,23 @@
             <p>This play is about four women who are not treated properly by their boss. It feels very relevant because
                 women do not often have many spaces of trust or a community and culture that believe them when they
                 speak out. Therefore, a visual solution will be to set the story in a place where women create their own
-                safe space away from their boss - at an American Apparel store in California.</p>
+                safe space away from their boss - at an American Apparel store in California.
+            </p>
 
-            <div class="grid-total">
+            <div class="all-pics grid-total">
+                <div class="pic-box">
+                    <img src="images/costumes/aft-mood-board.jpg" class="big-pic">
+                </div>
+
+                <div class="pic-box">
+                    <img src="images/costumes/aft-renderings-1.jpg" class="small-pic">
+                    <img src="images/costumes/aft-renderings-2.jpg" class="small-pic">
+                    <img src="images/costumes/aft-renderings-3.jpg" class="small-pic">
+                    <img src="images/costumes/aft-renderings-4.jpg" class="small-pic">
+                </div>
+            </div>
+
+            <!--<div class="grid-total">
                 <div class="grid-packet">
                     <img src="images/costumes/aft-renderings-1.jpg" class="grid-img">
                     <div class="overlay">
@@ -85,7 +99,7 @@
                         <div class="grid-text">Mood Board</div>
                     </div>
                 </div>
-            </div>
+            </div>-->
 
         </div>
 
@@ -98,6 +112,12 @@
                 scale. I used this pattern as my inspiration for my rendering. </p>
             <div class="grid-total">
                 <div class="grid-packet">
+                    <img src="images/costumes/mi-research.jpg" class="grid-img">
+                    <div class="overlay">
+                        <div class="grid-text">Research Imagery</div>
+                    </div>
+                </div>
+                <div class="grid-packet">
                     <img src="images/costumes/mi-final.jpg" class="grid-img">
                     <div class="overlay">
                         <div class="grid-text">Final Rendering</div>
@@ -109,15 +129,10 @@
                         <div class="grid-text">Thumbnail Sketches</div>
                     </div>
                 </div>
-                <div class="grid-packet">
-                    <img src="images/costumes/mi-research.jpg" class="grid-img">
-                    <div class="overlay">
-                        <div class="grid-text">Research Imagery</div>
-                    </div>
-                </div>
-            </div>    
-            
-    
+
+            </div>
+
+
 
         </div>
 
@@ -126,7 +141,7 @@
         <div class="suit-jacket">
             <h3>Half-Scale Suit Jacket</h3>
 
-            <div class="gallery">
+            <div class="suit-gallery">
                 <img src="images/tailoring/jacket-front.jpg" />
                 <img src="images/tailoring/jacket-back.jpg" />
                 <img src="images/tailoring/jacket-sans-sleeves.jpg" />
@@ -138,14 +153,27 @@
         <div class="suit-collar">
             <h3>Collar Dickie</h3>
 
-            <div class="gallery">
+            <div class="all-pics grid-total">
+                <div class="pic-box">
+                    <img src="images/tailoring/collar-front.jpg" class="big-pic">
+                </div>
+
+                <div class="pic-box">
+                    <img src="images/tailoring/collar-back.jpg" class="big-pic">
+                </div>
+            </div>
+
+
+            <!--<div class="gallery">
                 <img src="images/tailoring/collar-front.jpg" />
                 <img src="images/tailoring/collar-back.jpg" />
-                <img src="images/tailoring/collar-in-progress.jpg" />
-                <!--<img src="images/tailoring/collar-pad-stitching.jpg" />-->
-            </div>
+                <img src="" />
+               <img src="images/tailoring/collar-pad-stitching.jpg" />
+            </div>-->
+
+
         </div>
-<!--
+        <!--
         <div class="pockets">
             <h3>Upper Welt and Jetted Pockets</h3>
 
@@ -162,24 +190,53 @@
         <div class="final">
             <h3>Scenic Paint Final</h3>
 
-            <div class="gallery">
+            <div class="all-pics grid-total">
+                <div class="pic-box">
+                    <img src="images/scenic-paint/final-paint5.jpg" class="big-pic">
+                </div>
+
+                <div class="pic-box">
+                    <img src="images/scenic-paint/final-paint1.jpg" class="small-pic">
+                    <img src="images/scenic-paint/final-paint2.jpg" class="small-pic" />
+                    <img src="images/scenic-paint/final-paint3.jpg" class="small-pic" />
+                    <img src="images/scenic-paint/final-paint4.jpg" class="small-pic" />
+                </div>
+            </div>
+
+
+
+            <!--<div class="gallery">
                 <img src="images/scenic-paint/final-paint1.jpg" />
                 <img src="images/scenic-paint/final-paint2.jpg" />
                 <img src="images/scenic-paint/final-paint3.jpg" />
                 <img src="images/scenic-paint/final-paint4.jpg" />
+                <img src="images/scenic-paint/final-paint5.jpg" />
                 <div class="grid-packet">
                     <img src="images/scenic-paint/final-paint5.jpg" class="grid-img">
                     <div class="overlay">
                         <div class="grid-text">Final</div>
                     </div>
                 </div>
-            </div>
+            </div>-->
         </div>
 
         <div>
             <h3>Painted Drape Sample</h3>
 
-            <div class="gallery">
+            <div class="all-pics grid-total">
+                <div class="pic-box">
+                    <img src="images/scenic-paint/drape5.jpg" class="big-pic">
+                </div>
+
+                <div class="pic-box">
+                    <img src="images/scenic-paint/drape1.jpg" class="small-pic">
+                    <img src="images/scenic-paint/drape2.jpg" class="small-pic" />
+                    <img src="images/scenic-paint/drape3.jpg" class="small-pic" />
+                    <img src="images/scenic-paint/drape4.jpg" class="small-pic" />
+                </div>
+            </div>
+
+            <!--<div class="suit-gallery">
                 <img src="images/scenic-paint/drape1.jpg" />
                 <img src="images/scenic-paint/drape2.jpg" />
                 <img src="images/scenic-paint/drape3.jpg" />
@@ -190,24 +247,46 @@
                         <div class="grid-text">Final</div>
                     </div>
                 </div>
-            </div>
+            </div>-->
         </div>
 
         <div>
             <h3>Brick, Wood, Stone Sample</h3>
 
-            <div class="gallery">
+            <div class="all-pics grid-total">
+                <div class="pic-box">
+                    <img src="images/scenic-paint/bws4.jpg" class="big-pic">
+                </div>
+
+                <div class="pic-box">
+                    <img src="images/scenic-paint/bws1.jpg" class="small-pic">
+                    <img src="images/scenic-paint/bws2.jpg" class="small-pic">
+                    <img src="images/scenic-paint/bws3.jpg" class="small-pic">
+                </div>
+            </div>
+
+            <!--<div class="suit-gallery">
                 <img src="images/scenic-paint/bws1.jpg" />
                 <img src="images/scenic-paint/bws2.jpg" />
                 <img src="images/scenic-paint/bws3.jpg" />
                 <img src="images/scenic-paint/bws4.jpg" />
-            </div>
+            </div>-->
         </div>
 
         <div>
             <h3>Lanscape Sample</h3>
+            <!--<div class="all-pics grid-total">
+                <div class="pic-box">
+                    <img src="images/scenic-paint/landscape3.jpg" class="big-pic">
+                </div>
 
-            <div class="gallery">
+                <div class="pic-box">
+                    <img src="images/scenic-paint/landscape1.jpg" class="small-pic">
+                    <img src="images/scenic-paint/landscape2.jpg" class="small-pic">
+                </div>
+            </div>-->
+
+            <div class="suit-gallery">
                 <img src="images/scenic-paint/landscape1.jpg" />
                 <img src="images/scenic-paint/landscape2.jpg" />
                 <img src="images/scenic-paint/landscape3.jpg" />
