Creating a new gallery look

--- a/boxes.html
+++ b/boxes.html
@@ -13,7 +13,7 @@
 <body>
         <section id="all-projects" class="all-projects">
 
-            <h2 class="headliner">Costumes</h2>
+        <h2 class="headliner">Costumes</h2>
         <!--<div class="all-pics">
             <div class="pic-box">
                 <img src="images/scenic-paint/bws4.jpg" class="big-pic">
@@ -28,16 +28,11 @@
         <div>
             <h3>Brick, Wood, Stone Sample</h3>
 
-            <div class="all-pics">
-                <div class="pic-box">
-                    <img src="images/scenic-paint/bws4.jpg" class="big-pic">
-                </div>
-                    
-                <div class="pic-box">
+            <div class="side-by-side">
+                    <img src="images/scenic-paint/bws4.jpg" class="small-pic">
                     <img src="images/scenic-paint/bws1.jpg" class="small-pic">
                     <img src="images/scenic-paint/bws2.jpg" class="small-pic">
-                    <img src="images/scenic-paint/bws3.jpg" class="small-pic">
-                </div>    
+                    <img src="images/scenic-paint/bws3.jpg" class="small-pic">   
             </div>
         </div>
     </section>
