Working on new gallery layout

--- a/projects.html
+++ b/projects.html
@@ -141,10 +141,10 @@
         <div class="suit-jacket">
             <h3>Half-Scale Suit Jacket</h3>
 
-            <div class="suit-gallery">
-                <img src="images/tailoring/jacket-front.jpg" />
-                <img src="images/tailoring/jacket-back.jpg" />
-                <img src="images/tailoring/jacket-sans-sleeves.jpg" />
+            <div class="side-by-side">
+                <img src="images/tailoring/jacket-front.jpg" class="small-pic" />
+                <img src="images/tailoring/jacket-back.jpg" class="small-pic" />
+                <img src="images/tailoring/jacket-sans-sleeves.jpg" class="small-pic" />
                 <!--<img src="images/tailoring/collar-pad-stitching.jpg" />-->
             </div>
 
@@ -153,14 +153,9 @@
         <div class="suit-collar">
             <h3>Collar Dickie</h3>
 
-            <div class="all-pics grid-total">
-                <div class="pic-box">
+            <div class="side-by-side">
                     <img src="images/tailoring/collar-front.jpg" class="big-pic">
-                </div>
-
-                <div class="pic-box">
                     <img src="images/tailoring/collar-back.jpg" class="big-pic">
-                </div>
             </div>
 
 
@@ -286,10 +281,10 @@
                 </div>
             </div>-->
 
-            <div class="suit-gallery">
-                <img src="images/scenic-paint/landscape1.jpg" />
-                <img src="images/scenic-paint/landscape2.jpg" />
-                <img src="images/scenic-paint/landscape3.jpg" />
+            <div class="side-by-side">
+                <img src="images/scenic-paint/landscape1.jpg" class="small-pic" />
+                <img src="images/scenic-paint/landscape2.jpg" class="small-pic" />
+                <img src="images/scenic-paint/landscape3.jpg" class="small-pic" />
             </div>
         </div>
 
