Update Final Paint display

--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,7 @@
 
             <img src="images/costumes/peterman-shoe.png" class="j-peterman">
             <img src="images/costumes/peterman-bandana.png" class="j-peterman">
-        </div>
+        </div> <!-- End of J. Peterman div -->
 
         <div class="almost-fairy-time">
             <h3>Almost Fairy Time</h3>
@@ -101,7 +101,7 @@
                 </div>
             </div>-->
 
-        </div>
+        </div> <!-- End of Almost Fairy Time div -->
 
         <div class="museum-inspo">
             <h3>Museum Inspiration Project</h3>
@@ -129,12 +129,8 @@
                         <div class="grid-text">Thumbnail Sketches</div>
                     </div>
                 </div>
-
             </div>
-
-
-
-        </div>
+        </div> <!-- End of Museum Inspiration Project div -->
 
         <h2 class="headliner">Tailoring</h2>
 
@@ -147,8 +143,7 @@
                 <img src="images/tailoring/jacket-sans-sleeves.jpg" class="small-pic" />
                 <!--<img src="images/tailoring/collar-pad-stitching.jpg" />-->
             </div>
-
-        </div>
+        </div> <!-- End of Suit Jacket div -->
 
         <div class="suit-collar">
             <h3>Collar Dickie</h3>
@@ -157,17 +152,7 @@
                     <img src="images/tailoring/collar-front.jpg" class="big-pic">
                     <img src="images/tailoring/collar-back.jpg" class="big-pic">
             </div>
-
-
-            <!--<div class="gallery">
-                <img src="images/tailoring/collar-front.jpg" />
-                <img src="images/tailoring/collar-back.jpg" />
-                <img src="" />
-               <img src="images/tailoring/collar-pad-stitching.jpg" />
-            </div>-->
-
-
-        </div>
+        </div> <!-- End of Collar Dickie div -->
         <!--
         <div class="pockets">
             <h3>Upper Welt and Jetted Pockets</h3>
@@ -185,35 +170,21 @@
         <div class="final">
             <h3>Scenic Paint Final</h3>
 
-            <div class="all-pics grid-total">
+            <!--<div class="all-pics grid-total">
                 <div class="pic-box">
                     <img src="images/scenic-paint/final-paint5.jpg" class="big-pic">
                 </div>
-
-                <div class="pic-box">
-                    <img src="images/scenic-paint/final-paint1.jpg" class="small-pic">
-                    <img src="images/scenic-paint/final-paint2.jpg" class="small-pic" />
-                    <img src="images/scenic-paint/final-paint3.jpg" class="small-pic" />
-                    <img src="images/scenic-paint/final-paint4.jpg" class="small-pic" />
-                </div>
-            </div>
-
-
-
-            <!--<div class="gallery">
-                <img src="images/scenic-paint/final-paint1.jpg" />
-                <img src="images/scenic-paint/final-paint2.jpg" />
-                <img src="images/scenic-paint/final-paint3.jpg" />
-                <img src="images/scenic-paint/final-paint4.jpg" />
-                <img src="images/scenic-paint/final-paint5.jpg" />
-                <div class="grid-packet">
-                    <img src="images/scenic-paint/final-paint5.jpg" class="grid-img">
-                    <div class="overlay">
-                        <div class="grid-text">Final</div>
-                    </div>
-                </div>
             </div>-->
-        </div>
+            <div class="all-pics">
+                <img src="images/scenic-paint/final-paint5.jpg" class="big-pic">
+            </div>
+            <div class="side-by-side">
+                <img src="images/scenic-paint/final-paint1.jpg" class="small-pic hori" />
+                <img src="images/scenic-paint/final-paint2.jpg" class="small-pic hori" />
+                <img src="images/scenic-paint/final-paint3.jpg" class="small-pic hori" />
+                <img src="images/scenic-paint/final-paint4.jpg" class="small-pic hori" />
+            </div>
+        </div> <!-- End of Scenic Paint Final div -->
 
         <div>
             <h3>Painted Drape Sample</h3>
@@ -230,20 +201,7 @@
                     <img src="images/scenic-paint/drape4.jpg" class="small-pic" />
                 </div>
             </div>
-
-            <!--<div class="suit-gallery">
-                <img src="images/scenic-paint/drape1.jpg" />
-                <img src="images/scenic-paint/drape2.jpg" />
-                <img src="images/scenic-paint/drape3.jpg" />
-                <img src="images/scenic-paint/drape4.jpg" />
-                <div class="grid-packet">
-                    <img src="images/scenic-paint/drape5.jpg" class="grid-img">
-                    <div class="overlay">
-                        <div class="grid-text">Final</div>
-                    </div>
-                </div>
-            </div>-->
-        </div>
+        </div> <!-- End of Painted Drape div -->
 
         <div>
             <h3>Brick, Wood, Stone Sample</h3>
@@ -259,37 +217,17 @@
                     <img src="images/scenic-paint/bws3.jpg" class="small-pic">
                 </div>
             </div>
-
-            <!--<div class="suit-gallery">
-                <img src="images/scenic-paint/bws1.jpg" />
-                <img src="images/scenic-paint/bws2.jpg" />
-                <img src="images/scenic-paint/bws3.jpg" />
-                <img src="images/scenic-paint/bws4.jpg" />
-            </div>-->
-        </div>
+        </div> <!-- End of Brick, Wood, Stone div-->
 
         <div>
             <h3>Lanscape Sample</h3>
-            <!--<div class="all-pics grid-total">
-                <div class="pic-box">
-                    <img src="images/scenic-paint/landscape3.jpg" class="big-pic">
-                </div>
-
-                <div class="pic-box">
-                    <img src="images/scenic-paint/landscape1.jpg" class="small-pic">
-                    <img src="images/scenic-paint/landscape2.jpg" class="small-pic">
-                </div>
-            </div>-->
 
             <div class="side-by-side">
                 <img src="images/scenic-paint/landscape1.jpg" class="small-pic" />
                 <img src="images/scenic-paint/landscape2.jpg" class="small-pic" />
                 <img src="images/scenic-paint/landscape3.jpg" class="small-pic" />
             </div>
-        </div>
-
-
-
+        </div> <!-- End of Landscape Sample div -->
     </section>
 
     <footer>
