Update pockets images

--- a/projects.html
+++ b/projects.html
@@ -153,18 +153,18 @@
                     <img src="images/tailoring/collar-back.jpg" class="big-pic">
             </div>
         </div> <!-- End of Collar Dickie div -->
-        <!--
-        <div class="pockets">
+
+        <!--<div class="pockets">
             <h3>Upper Welt and Jetted Pockets</h3>
 
-            <div class="gallery">
-                <img src="images/tailoring/jetted-pocket-front.jpg" />
-                <img src="images/tailoring/jetted-pocket-back.jpg" />
-                <img src="images/tailoring/upper-welt-front.jpg" />
-                <img src="images/tailoring/upper-welt-back.jpg" />
+            <div class="side-by-side">
+                <img src="images/tailoring/jetted-pocket-front.jpg" class="small-pic" />
+                <img src="images/tailoring/jetted-pocket-back.jpg" class="small-pic" />
+                <img src="images/tailoring/upper-welt-front.jpg" class="small-pic" />
+                <img src="images/tailoring/upper-welt-back.jpg" class="small-pic" />
             </div>
-        </div>
--->
+        </div>-->
+
         <h2 class="headliner">Scenic Paint</h2>
 
         <div class="final">
