Add positions to header

--- a/productions.html
+++ b/productions.html
@@ -36,7 +36,11 @@
 
     <section id="all-productions" class="all-productions">
         <div>
-            <h2 class="headliner">Julius Caesar</h2>
+            <div class="headliner">
+                <h2>Julius Caesar</h2>
+                <p>Production Stage Manager</p>
+            </div>
+            
 
 
             <div class="production-gallery">
@@ -74,7 +78,10 @@
             </div>
         </div>
         <div>
-            <h2 class="headliner">Of Thee I Sing</h2>
+            <div class="headliner">
+                <h2>Of Thee I Sing</h2>
+                <p>Stage Manager</p>
+            </div>
 
             <div class="production-gallery">
                 <img src="images/otis/otis4.jpg" />
@@ -107,7 +114,10 @@
             </div>
         </div>
         <div>
-            <h2 class="headliner">Elizabeth Cree</h2>
+            <div class="headliner">
+                <h2>Elizabeth Cree</h2>
+                <p>Assistant Stage Manager</p>
+            </div>
 
             <div class="production-gallery">
                 <img src="images/cree/cree2.jpg" />
@@ -143,7 +153,10 @@
             </div>
         </div>
         <div>
-            <h2 class="headliner">Pippin: Her Life and Times</h2>
+            <div class="headliner">
+                <h2>Pippin: Her Life and Times</h2>
+                <p>Assistant Stage Manager</p>
+            </div>
 
             <div class="production-gallery">
                 <img src="images/pippin-hlt/pippin-hlt5.jpg" />
