--- a/boxes.html
+++ b/boxes.html
@@ -5,38 +5,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Andy Blatt website" />
-    <title>Andy Blatt Projects</title>
+    <title>Andy Blatt Productions</title>
+    <link rel="icon" type="image/x-icon" href="/ABfavicon.png">
     <link rel="stylesheet" href="harrystyles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+        rel="stylesheet">
 </head>
 
-
 <body>
-        <section id="all-projects" class="all-projects">
+    <section id="all-productions" class="all-productions">
 
-        <h2 class="headliner">Costumes</h2>
-        <!--<div class="all-pics">
-            <div class="pic-box">
-                <img src="images/scenic-paint/bws4.jpg" class="big-pic">
+            <div class="headliner">
+                <h2>Julius Caesar</h2>
+                <p>Production Stage Manager</p>
             </div>
-                
-            <div class="pic-box">
-                <img src="images/scenic-paint/bws1.jpg" class="small-pic">
-                <img src="images/scenic-paint/bws2.jpg" class="small-pic">
-                <img src="images/scenic-paint/bws3.jpg" class="small-pic">
-            </div>    
-        </div>-->
-        <div>
-            <h3>Brick, Wood, Stone Sample</h3>
 
-            <div class="side-by-side">
-                    <img src="images/scenic-paint/bws4.jpg" class="small-pic">
-                    <img src="images/scenic-paint/bws1.jpg" class="small-pic">
-                    <img src="images/scenic-paint/bws2.jpg" class="small-pic">
-                    <img src="images/scenic-paint/bws3.jpg" class="small-pic">   
-            </div>
-        </div>
     </section>
-
 </body>
 
 </html>
