--- a/resume.html
+++ b/resume.html
@@ -17,7 +17,7 @@
     <nav class="nav">
         <a class="logo" href="/index.html">
           <h1>Andy Blatt</h1>
-          <h2>Theater Technician</h2>
+          <h2>Stage Manager</h2>
         </a>
         <ul class="nav-list">
             <li><a class="navigate" href="/contact.html">Contact</a></li>
