Trying new stuff
Putting download buttons side by side

--- a/boxes.html
+++ b/boxes.html
@@ -15,13 +15,16 @@
 </head>
 
 <body>
-    <section id="all-productions" class="all-productions">
-
-            <div class="headliner">
-                <h2>Julius Caesar</h2>
-                <p>Production Stage Manager</p>
+    <section>
+        <div class="resume-all">
+            <img src="ABResume.png" class="resume" />
+            <div class="download-buttons">
+                    <a href="/AndyBlattResume.pdf" target="_blank">Click here to download resume</a>
+                    <a href="/AndyBlattCV.pdf" target="_blank">Click here to download CV</a>     
             </div>
-
+        </div>
+        
+       <!-- <embed src="/ABResume.pdf" type="application/pdf" title="Embedded PDF Viewer" class="resume-view" />-->
     </section>
 </body>
 
