--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
             <h2>Stage Manager</h2>
         </a>
         <ul class="nav-list">
-            <li><a class="navigate" href="/contact.html">Contact</a></li>
+            <!--<li><a class="navigate" href="/contact.html">Contact</a></li>-->
             <li><a class="navigate" href="/resume.html">Resume</a></li>
             <li><a class="navigate" href="/projects.html">Projects</a></li>
             <li><a class="navigate" href="/productions.html">Productions</a></li>
@@ -138,9 +138,14 @@
             <h3>Half-Scale Suit Jacket</h3>
 
             <div class="side-by-side">
-                <img src="images/tailoring/jacket-front.jpg" class="small-pic" />
+                <div class="grid-packet">
+                    <img src="images/tailoring/jacket-front.jpg" class="grid-img small-pic" />
+                    <div class="overlay grid-text">Front</div>
+
+                </div>
+                <!--<img src="images/tailoring/jacket-front.jpg" class="small-pic" />
                 <img src="images/tailoring/jacket-back.jpg" class="small-pic" />
-                <img src="images/tailoring/jacket-sans-sleeves.jpg" class="small-pic" />
+                <img src="images/tailoring/jacket-sans-sleeves.jpg" class="small-pic" />-->
                 <!--<img src="images/tailoring/collar-pad-stitching.jpg" />-->
             </div>
         </div> <!-- End of Suit Jacket div -->
