--- a/productions.html
+++ b/productions.html
@@ -21,7 +21,7 @@
             <h2>Stage Manager</h2>
         </a>
         <ul class="nav-list">
-            <li><a class="navigate" href="/contact.html">Contact</a></li>
+            <!--<li><a class="navigate" href="/contact.html">Contact</a></li>-->
             <li><a class="navigate" href="/resume.html">Resume</a></li>
             <li><a class="navigate" href="/projects.html">Projects</a></li>
             <li><a class="navigate" href="/productions.html">Productions</a></li>
