--- a/projects.html
+++ b/projects.html
@@ -138,14 +138,9 @@
             <h3>Half-Scale Suit Jacket</h3>
 
             <div class="side-by-side">
-                <div class="grid-packet">
-                    <img src="images/tailoring/jacket-front.jpg" class="grid-img small-pic" />
-                    <div class="overlay grid-text">Front</div>
-
-                </div>
-                <!--<img src="images/tailoring/jacket-front.jpg" class="small-pic" />
+                <img src="images/tailoring/jacket-front.jpg" class="small-pic" />
                 <img src="images/tailoring/jacket-back.jpg" class="small-pic" />
-                <img src="images/tailoring/jacket-sans-sleeves.jpg" class="small-pic" />-->
+                <img src="images/tailoring/jacket-sans-sleeves.jpg" class="small-pic" />
                 <!--<img src="images/tailoring/collar-pad-stitching.jpg" />-->
             </div>
         </div> <!-- End of Suit Jacket div -->
